--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="success">success</string>
     <string name="successfully_posted_post">Successfully posted post!</string>
     <string name="ok">ok</string>
+    <string name="slb">Show Leaderboard</string>
 
     <string-array name="themes_array_titles">
         <item>Forest</item>
